--- a/package.json
+++ b/package.json
@@ -12,11 +12,25 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "daisyui": "^2.51.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "framer-motion": "^10.0.1",
+    "gsap": "^3.11.4",
+    "leaflet": "^1.9.3",
     "next": "13.2.1",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/leaflet": "^1.9.1",
+    "@types/react-leaflet": "^3.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
